# deckd

./: .gitignore  Cargo.toml  README.md  com.deckd.daemon.plist
bundle/deckd.app/Contents/: Info.plist
bundle/deckd.app/Contents/MacOS/: deckd
scripts/: deckd-notify.sh  dnd-off.sh  dnd-on.sh  setup-assets.sh  slack-status.sh
src/: actions.rs  audio.rs  boot.rs  camera.rs  config.rs  dashboard.rs  deck.rs  gcal.rs  icons.rs  lights.rs  main.rs  notify.rs  render.rs  soundboard.rs  sysmon.rs  tamagotchi.rs  timer.rs  uvc.rs
